@@ -23,7 +23,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.2.3</version>
+        <version>3.4.2</version>
     </parent>
 
     <groupId>org.apache.hertzbeat</groupId>
@@ -79,15 +79,17 @@
     
     
     <modules>
-        <module>manager</module>
-        <module>alerter</module>
-        <module>common</module>
-        <module>collector</module>
-        <module>warehouse</module>
-        <module>remoting</module>
-        <module>push</module>
-        <module>plugin</module>
-        <module>grafana</module>
+        <module>hertzbeat-manager</module>
+        <module>hertzbeat-alerter</module>
+        <module>hertzbeat-common</module>
+        <module>hertzbeat-collector</module>
+        <module>hertzbeat-warehouse</module>
+        <module>hertzbeat-remoting</module>
+        <module>hertzbeat-push</module>
+        <module>hertzbeat-plugin</module>
+        <module>hertzbeat-grafana</module>
+        <module>hertzbeat-e2e</module>
+        <module>hertzbeat-base</module>
     </modules>
 
     <properties>
@@ -110,14 +112,12 @@
 
         <springdoc.version>2.3.0</springdoc.version>
         <spring-boot-starter-sureness.version>1.1.0</spring-boot-starter-sureness.version>
-
+        <javaparser.version>3.26.1</javaparser.version>
         <nekohtml.version>1.9.22</nekohtml.version>
         <json-path.version>2.9.0</json-path.version>
         <gson.version>2.10.1</gson.version>
         <guava.version>32.1.2-jre</guava.version>
-        <protobuf.version>3.19.6</protobuf.version>
-        <tencentcloud-sdk-java-sms.version>3.1.648</tencentcloud-sdk-java-sms.version>
-        <aliYun-sdk-java-sms.version>2.0.24</aliYun-sdk-java-sms.version>
+        <protobuf.version>3.25.5</protobuf.version>
         <caffeine.version>2.9.3</caffeine.version>
         <httpclient.version>4.5.14</httpclient.version>
 
@@ -142,17 +142,18 @@
         <commons-collections4.version>4.4</commons-collections4.version>
         <commons-jexl3>3.2.1</commons-jexl3>
         <commons-net>3.10.0</commons-net>
+        <commons-compress.version>1.27.1</commons-compress.version>
         <jacoco-maven-plugin.version>0.8.11</jacoco-maven-plugin.version>
         <spotless.version>2.40.0</spotless.version>
         
         <easy-poi.version>4.3.0</easy-poi.version>
-        <poi.version>4.1.1</poi.version>
+        <poi.version>4.1.2</poi.version>
         <concurrentlinkedhashmap-lru.version>1.4.2</concurrentlinkedhashmap-lru.version>
         <sshd-core.version>2.13.1</sshd-core.version>
         <eddsa.version>0.3.0</eddsa.version>
         <snmp4j.version>3.6.7</snmp4j.version>
         <rocketmq-tools.version>4.9.4</rocketmq-tools.version>
-        <dnsjava.version>3.5.2</dnsjava.version>
+        <dnsjava.version>3.6.2</dnsjava.version>
         <consul-api.version>1.4.5</consul-api.version>
         <nacos-client.version>2.2.1</nacos-client.version>
         <vesoft-client.version>3.6.0</vesoft-client.version>
@@ -167,8 +168,11 @@
         <influxdb.version>2.23</influxdb.version>
         <spring-cloud-starter-openfeign.version>3.0.5</spring-cloud-starter-openfeign.version>
         <taos-jdbcdriver.version>3.0.0</taos-jdbcdriver.version>
-        <greptimedb.version>0.7.3</greptimedb.version>
+        <greptimedb.version>0.11.0</greptimedb.version>
         <mysql-jdbcdriver.version>8.0.33</mysql-jdbcdriver.version>
+        <arrow.version>18.1.0</arrow.version>
+        <snappy-java.version>1.1.10.7</snappy-java.version>
+        <sshd-sftp.version>2.13.1</sshd-sftp.version>
     </properties>
 
     <dependencyManagement>
@@ -177,6 +181,12 @@
             <dependency>
                 <groupId>org.apache.hertzbeat</groupId>
                 <artifactId>hertzbeat-common</artifactId>
+                <version>${hertzbeat.version}</version>
+            </dependency>
+            <!-- base -->
+            <dependency>
+                <groupId>org.apache.hertzbeat</groupId>
+                <artifactId>hertzbeat-base</artifactId>
                 <version>${hertzbeat.version}</version>
             </dependency>
             <!-- data warehouse -->
@@ -410,17 +420,6 @@
                     </exclusion>
                 </exclusions>
             </dependency>
-            <!-- sms -->
-            <dependency>
-                <groupId>com.tencentcloudapi</groupId>
-                <artifactId>tencentcloud-sdk-java-sms</artifactId>
-                <version>${tencentcloud-sdk-java-sms.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.aliyun</groupId>
-                <artifactId>dysmsapi20170525</artifactId>
-                <version>${aliYun-sdk-java-sms.version}</version>
-            </dependency>
             <!-- okhttp -->
             <dependency>
                 <groupId>com.squareup.okhttp3</groupId>
@@ -451,6 +450,22 @@
                 <groupId>io.netty</groupId>
                 <artifactId>netty-all</artifactId>
                 <version>${netty.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.arrow</groupId>
+                <artifactId>arrow-vector</artifactId>
+                <version>${arrow.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.arrow</groupId>
+                <artifactId>arrow-memory-netty</artifactId>
+                <version>${arrow.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.sshd</groupId>
+                <artifactId>sshd-sftp</artifactId>
+                <version>${sshd-sftp.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -486,6 +501,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven-surefire-plugin.version}</version>
+                <configuration>
+                    <argLine>--add-opens=java.base/java.nio=org.apache.arrow.memory.core,ALL-UNNAMED</argLine>
+                </configuration>
             </plugin>
             <!-- java code style check -->
             <plugin>
